refactor: 확장된 도메인으로 개선 및 기존 도메인 제거